# Hack_U_2020_TofuTechs

./: .gitignore  .gitmodules  AudioSetModel.2.0100.ckpt.index  AudioSetModel.3.0016.ckpt.index  AudioSetModel.3.0030.ckpt.index  AudioSetModel.3.0066.ckpt.index  AudioSetModel.5.0019.ckpt.index  AudioSetModel.5.0029.ckpt.index  README.md  run_this.txt  vggish_parser.py
HackU2020_Arduino/: CMakeLists.txt  Circulator.cpp  Circulator.h  HackU2020_Arduino.ino  Lights.cpp  Lights.h  Mist.cpp  Mist.h  Pin.cpp  Pin.h  Pins.h  Protocols.cpp  Protocols.h  Punch.cpp  Punch.h  ReceiveBehavior.h  ReceiveManager.cpp  ReceiveManager.h  Shock.cpp  Shock.h  Water.cpp  Water.h
PcEnv/: AudioRecorder.py  FileLocker.py  RecordProcessor.py  RecordProcessorTest.py  RemoteController.py  SerialCommunicator.py  SoundJudger.py  VggishParser.py  audioTest.py  check_device.py  main.py  run.py  vggdebug.py  vggish_parser.py  vggish_parser_test.py  wave_processing.py
PcEnv/TestWavs/: Test
PcEnv/vggish/: vggish_input.py  vggish_postprocess.py  vggish_slim.py
